# globus-toolkit

./: .cvsignore  .gitignore  .gitmodules  ChangeLog  Doxyfile.in  INSTALL  LICENSE  LICENSE.globus  MANIFEST.in  Makefile  Makefile.am  Makefile.in  PROTOCOL  README  README.building  README.md  README.sasl  REPOSITORY  SXXmyproxy  TODO  USAGE  VERSION  accept_credmap.c  admin_add_user_config.pl  auth_pam.c  bootstrap  branch.def  certauth_extensions.c  certauth_resolveuser.c  configure.ac  configure.in  distribution.xml.in  etc.init.d.myproxy  etc.services.modifications  getopt_long.c  globus-vararg-enums-doxygen-filter.pl  globus_gridftp_server_hdfs.c  globus_makefile_header  gnu_getopt.c  gnu_getopt.h  (+99 more)
callout/source/: .cvsignore  Makefile.am  configure.ac  configure.in  dirt.sh  globus-callout-uninstalled.pc.in  globus-callout.pc.in  globus-callout.spec  version.h.in
callout/test/: Makefile.am  callout_chain_test.c  callout_test.c  configure.in  dirt.sh  flavor.h.in  libchaina_test.c  libchainb_test.c  libchainc_test.c  libtest.c  test.conf  test.conf.in
common/setup/: .cvsignore  Makefile.am  bootstrap  configure.in  dirt.sh  findshelltools.in  globus-domainname.in  globus-hostname.in  globus-localdomain.conf.in  globus-script-initializer.in  globus-sh-tools-vars.sh.in  globus_common_test_setup  setup-common-sh-scripts.in  setup-globus-common  setup-globus-common-test  setup-globus-common.in  setup-globus-common.pl  setup-globus-common.pl.in  setup-tmpdirs.in
common/source/: .cvsignore  .gitignore  Common.sln  ISSUES.WIN32  Makefile.am  README.WIN32  WinCommon.vcproj  acconfig.h  bootstrap  build_parameters.in  config.h.in  configure.ac  configure.in  dirt.sh  find_defines.pl  globus-common-uninstalled.pc.in  globus-common.pc.in  globus-common.spec  globus-thread-pthread-uninstalled.pc.in  globus-thread-windows-uninstalled.pc.in  globus_common.txt  pkg_data_src.gpt.in  version.h.in
common/test/: .cvsignore  Makefile.am  TESTS-junit.pl  TESTS.pl  configure.in  dirt.sh  dirt.sh.in  globus-common-args-test.pl  globus-common-error-stg-test.pl  globus-common-error-test.pl  globus-common-fifo-test.pl  globus-common-handle-table-test.pl  globus-common-hash-test.pl  globus-common-largefile-test.pl  globus-common-libcsetenv-test.pl  globus-common-list-test.pl  globus-common-mem-test.pl  globus-common-module-test.pl  globus-common-poll-test.pl  globus-common-strptime-test.pl  globus-common-thread-test.pl  globus-common-timedwait-test.pl  globus-common-url-test.pl  globus-common-uuid-test.pl  globus_common_args_test.c  globus_common_args_test.pl  globus_common_args_test.pl.in  globus_common_args_test.stderr  globus_common_args_test.stdout  globus_common_error_stg_test.pl  globus_common_error_string_test.c  globus_common_error_string_test.pl.in  globus_common_error_string_test.stdout  globus_common_error_test.c  globus_common_error_test.pl  globus_common_error_test.stdout  globus_common_fifo_test.c  globus_common_fifo_test.stdout  globus_common_handle_table_test.c  globus_common_handle_table_test.stdout  (+35 more)
conf/: Makefile.am  gridftp-hdfs  gridftp-hdfs-environment  gridftp-hdfs-local.conf  gridftp-hdfs.in  gridftp-hdfs.logrotate  gridftp-hdfs.spec  gridftp-inetd.conf  gridftp-inetd.conf.in  gridftp.conf  gridftp_hdfs.spec  gsiftp-hdfs  gsiftp-hdfs.in  myproxy-oauth
core/setup/: Makefile.am  Paths.in  bootstrap  configure.in  dirt.sh  findshelltools.in  globus-args-parser-header  globus-makefile-header.in  globus-script-initializer.in  globus-sh-tools.sh.in  setup-globus-core  setup-globus-core.pl  setup_globus_core  setup_globus_core.pl
core/source/: .gitignore  GLOBUS_LICENSE  Makefile.am  README.W2K  acconfig.h  bootstrap  configure.in  dirt.sh  globus-build-env.sh.in  globus-core.spec  globus-sh-tools.sh.in  globus_config.h.in  globus_config.h.win
gatekeeper/setup/: Makefile.am  configure.in  dirt.sh  setup-globus-gatekeeper  setup-globus-gatekeeper.pl
gatekeeper/source/: .cvsignore  Makefile.am  bootstrap  configure.in  dirt.sh  dirt.sh.in  gatekeeper.logrotate.in  globus-gatekeeper-admin.in  globus-gatekeeper-manual.xml  globus-gatekeeper.8  globus-k5-manual.xml  globus-k5.8  globus_gatekeeper.c  globus_gatekeeper_utils.c  globus_gatekeeper_utils.h  globus_k5.c  manual.xml  setenv.c  unicos.c  unicos.h  unicos_includes.h  unsetenv.c
gram/documentation/: .cvsignore  Makefile.am  architecture.dot  changes.dox  configure.in  dirt.sh  main.dox  overview.dox  states.dot
gram/integration_test/: configure.in  job-manager-script-test.pl.in
gram_client_tools/source/: .cvsignore  .gitignore  Makefile.am  configure.in  (+27 more)
myproxy/: .cvsignore  CHANGES-MYPROXY_0_2alpha3-datagrid-branch  ChangeLog  INSTALL  LICENSE  LICENSE.netbsd  LICENSE.pidfile  LICENSE.pubcookie  Makefile  Makefile.am  Makefile.in  NOTES-MYPROXY_0_2alpha3-datagrid-branch  PROTOCOL  README  README.Fedora  README.building  README.sasl  REPOSITORY  TODO  USAGE  VERSION  __init__.py  accept_credmap.c  accept_credmap.h  admin_add_user.pl  auth_pam.c  certauth_extensions.c  certauth_extensions.h  certauth_resolveuser.c  certauth_resolveuser.h  config.h  configure.in  etc.inetd.conf.modifications  etc.init.d.myproxy  etc.init.d.myproxy.nonroot  etc.xinetd.myproxy  globus_sasl_gssapi_gsi.tgz  gnu_getopt.c  gnu_getopt.h  gnu_getopt_long.c  (+104 more)
test/: 55184f03.0  55184f03.signing_policy  Makefile.am  TESTS.pl  Utilities.pm  Utilities.pm.in  b38b4d8c.signing_policy  configure.in  dirt.sh  dirt.sh.in  global_security_descriptor.xml.in  globus-test-check-for-commands.pl  globus-test-check-proxy.pl  globus-test-gram-local.pl  globus-test-gram-remote.pl  globus-test-gridftp-local.pl  globus-test-gridftp-remote.pl  globus_test_check_for_commands.pl  globus_test_check_proxy.pl  globus_test_gram_local.pl  globus_test_gram_remote.pl  globus_test_gridftp_local.pl  globus_test_gridftp_remote.pl  globus_test_setup_environment.pl  gram-gridftp-test-package  test-package  test-package.in  test-toolkit  test-toolkit.in  testcred-env.sh  testcred-env.sh.in  testcred-setup.sh  testcred-setup.sh.in  testcred.pem  usercert.pem  userkey.pem
(+8238 files in other folders)
